2013-02-07  David Kilzer  <ddkilzer@apple.com>

        Fix #endif comment from r142163 and r142183

        * wtf/MainThread.h:
        (WTF): s/PLATFORM/USE/

2013-02-07  Benjamin Poulain  <bpoulain@apple.com>

        Fix an incorrect comment from r142163

        Unreviewed.

        * wtf/MainThread.h:
        I accidentally copied PLATFORM(IOS) instead of USE(WEB_THREAD) for the #ifdef closing.

2013-02-07  Benjamin Poulain  <bpoulain@apple.com>

        Upstream iOS isWebThread() and isUIThread()
        https://bugs.webkit.org/show_bug.cgi?id=109130

        Reviewed by Sam Weinig.

        On iOS, it is sometimes necessary to differenciate the thread running WebCore,
        and the thread running the UI. This patch upstream those functions.

        * wtf/MainThread.cpp:
        * wtf/MainThread.h:
        Disable the legacy initializer as it is incorrect when using the WebThread to run WebCore.
        (WTF::isWebThread):
        (WTF::isUIThread):
        Return true when the current thread is the Web/UI thread.

        * wtf/mac/MainThreadMac.mm:
        (WTF::isUIThread):
        (WTF::isWebThread):

        * wtf/text/AtomicString.cpp:
        (WTF::AtomicStringTable::create):
        Use the newly added methods.

2013-02-07  Caio Marcelo de Oliveira Filho  <caio.oliveira@openbossa.org>

        [Qt] Fix build without 3D_GRAPHICS
        https://bugs.webkit.org/show_bug.cgi?id=109194

        Reviewed by Noam Rosenthal.

        Now that Coordinated Graphics was moved to WebCore, we need to explicitly enable
        it when we have 3D_GRAPHICS. This dependency was implicitly by the fact that
        3D_GRAPHICS is a dependency of WebKit2 and Coordinated Graphics was only
        available there. This should fix build for Qt SH4 Linux.

        * wtf/Platform.h:

2013-02-06  Zan Dobersek  <zdobersek@igalia.com>

        [WTFURL] Fix erroneous header inclusions in WTFURL code
        https://bugs.webkit.org/show_bug.cgi?id=109040
